--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -43,21 +43,6 @@
 
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,9 +50,24 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/controlButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="6dp"
+            android:height="60dp"
+            android:padding="6dp"
+            android:gravity="center"
+            android:textColor="@color/colorBlack"
+            android:drawableLeft="@mipmap/ic_control"
+            android:text="Контроль" />
 
 
     </LinearLayout>
+
+
+
 
 
 </LinearLayout>
