--- a/app/src/main/res/layout/activity_tren.xml
+++ b/app/src/main/res/layout/activity_tren.xml
@@ -140,7 +140,8 @@
             android:gravity="center"
             android:textColor="@color/colorBlack"
             android:drawableLeft="@mipmap/ic_control"
-            android:text="Контроль" />
+            android:text="Контроль"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
