--- a/app/src/main/res/layout/activity_tren.xml
+++ b/app/src/main/res/layout/activity_tren.xml
@@ -97,7 +97,7 @@
             android:padding="6dp"
             android:gravity="center"
             android:textColor="@color/colorBlack"
-            android:drawableLeft="@mipmap/ic_truefalse"
+            android:drawableLeft="@mipmap/ic_tren"
             android:text="Соответствие" />
 
     </LinearLayout>
@@ -118,8 +118,29 @@
             android:padding="6dp"
             android:gravity="center"
             android:textColor="@color/colorBlack"
-            android:drawableLeft="@mipmap/ic_truefalse"
+            android:drawableLeft="@mipmap/ic_tren"
             android:text="Раньше - позже" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/type7Button"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="6dp"
+            android:height="60dp"
+            android:padding="6dp"
+            android:gravity="center"
+            android:textColor="@color/colorBlack"
+            android:drawableLeft="@mipmap/ic_tren"
+            android:text="Логическая цепочка" />
 
     </LinearLayout>
 
